# Detector-de-fugas-de-agua-distribuido-utilizando-Openthread-y-RTOS-

./: .gitignore  LICENSE  README.md
ESP32-H2 amb sensor/: .gitignore
ESP32-H2 amb sensor/ESP32-S3 (host BR)/main/: idf_component.yml
ESP32-H2 amb sensor/main/: esp_ot_config.h  esp_ot_nodosensor.c
ESP32-S3 (host BR)/main/: CMakeLists.txt  escalado_imagen.c  esp_ot_br.c  musical_score_encoder.h
RCP BR/: sdkconfig
RCP BR/main/: esp_ot_config.h  esp_ot_rcp.c
main/: CMakeLists.txt  decode_image.c  decode_image.h  escalado_imagen.h  esp_ot_config.h  musical_score_encoder.c
